--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "vue": "^2.6.14",
     "vue-chartjs": "^4.0.7",
     "vue-router": "^3.5.3",
-    "vuetify": "^2.6.0"
+    "vuetify": "^2.6.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
